# pdns-mcp-server

./: .dockerignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: README.md  usage.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
src/pdns_mcp_server/: client.py  config.py  main.py  rrset.py  tools.py
tests/: test_client.py  test_config.py  test_main.py  test_rrset.py  test_tools.py
