[project]
name = "pdns-mcp-server"
version = "0.1.0"
description = "MCP server for PowerDNS DNS record management via PowerDNS-Admin API"
requires-python = ">=3.12"
dependencies = [
    "mcp",
    "httpx",
    "pydantic-settings",
]

[project.scripts]
pdns-mcp-server = "pdns_mcp_server.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdns_mcp_server"]